--- a/AlFeldstein/AlFeldstein.html
+++ b/AlFeldstein/AlFeldstein.html
@@ -31,6 +31,8 @@
 </p><p>
 Albert Bernard Feldstein (October 24, 1925 – April 29, 2014) was an American writer, editor, and artist, best known for his work at <a href="../ECComics/ECComics.html">EC Comics</a> and, from 1956 to 1985, as the editor of the satirical magazine <a href="../Mad/Mad.html">Mad</a>. After retiring from Mad, Feldstein concentrated on American paintings of Western wildlife.
 </p><p>
+He attended the High School of Music & Art in New York City, together with future EC Comics and Mad artists <a href="../HarveyKurtzman/HarveyKurtzman.html">Harvey Kurtzman</a>, <a href="../WillElder/WillElder.html">Will Elder</a>, <a href="../JohnSeverin/JohnSeverin.html">John Severin</a> and <a href="../AlJaffee/AlJaffee.html">Al Jaffee</a>.
+</p><p>
 His earliest background art was for <a href="../Sheena/Sheena.html">Sheena, Queen of the Jungle</a>. After graduating from high school he attended the Art Students League. Feldstein freelanced art for comic books, including Fox Comics.
 </p><p>
 Arriving at EC in 1948, Feldstein began as an artist, but he soon combined art with writing, eventually editing most of the EC titles. Although he originally wrote and illustrated approximately one story per comic, in addition to doing many covers, Feldstein finally focused on editing and writing, reserving his artwork primarily for covers. From late 1950 through 1953, he edited and wrote stories for seven EC titles.
