--- a/WillElder/WillElder.html
+++ b/WillElder/WillElder.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<img src="WillElder.jpg"> <br>
+<img src="WillElder13.jpg"> <br>
 
 <p>
 <div class="row"><div class="column">
@@ -19,6 +19,7 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
+<div class="mySlides" style="text-align: center;"><img src="WillElder13.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="WillElder01.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="WillElder02.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="WillElder03.jpg"></div>
@@ -26,16 +27,33 @@
 <div class="mySlides" style="text-align: center;"><img src="WillElder05.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="WillElder06.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="WillElder07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WillElder08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WillElder09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WillElder10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WillElder11.jpg" title="Al Jaffee, Will Elder"></div>
+<div class="mySlides" style="text-align: center;"><img src="WillElder.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WillElder12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WillElder14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WillElder15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WillElder16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WillElder17.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-William Elder (1921 – 2008) was an American illustrator and comic book artist who worked in numerous areas of commercial art but is best known for a frantically funny cartoon style that helped launch Harvey Kurtzman's Mad comic book in 1952.
+William Elder (1921 – 2008) was an American illustrator and comic book artist who worked in numerous areas of commercial art but is best known for a frantically funny cartoon style that helped launch Harvey Kurtzman's Mad comic book in 1952. Sometimes listed as Will or Bill Elder.
 </p><p>
 Playboy publisher Hugh Hefner said, "He was a zany, and a lovable one." Longtime Mad writer-cartoonist Al Jaffee called Elder "Absolutely brilliant... he was the star from the beginning. He had a feel for the kind of satire that eventually spread everywhere."
 </p><p>
+Elder attended New York's High School of Music and Art together with future Mad artists <a href="../HarveyKurtzman/HarveyKurtzman.html">Harvey Kurtzman</a>, <a href="../JohnSeverin/JohnSeverin.html">John Severin</a>, <a href="../AlJaffee/AlJaffee.html">Al Jaffee</a> and <a href="../AlFeldstein/AlFeldstein.html">Al Feldstein</a>.
+</p><p>
 Elder was inducted into the Comic Book Hall of Fame in 2003. In 2018, the Comics Reporter's Tom Spurgeon described Elder as "an amazing artist, a sneaky spot-holder on the top 20 of the 20th century."
+</p><p>
+<li><a href="../Mad/Mad.html">Mad Magazine</a> (1952)
+<li><a href="../Panic/Panic.html">Panic</a> (1954)
+<li><a href="../Humbug/Humbug.html">Humbug Magazine</a> (1957)
+<li><a href="WillElder16.jpg">Goodman Beaver</a> (1984)
 </p>
 </body>
 </html>
