--- a/Panic/Panic.html
+++ b/Panic/Panic.html
@@ -38,7 +38,7 @@
 </p><p>
 Panic was part of the EC Comics line during the mid-1950s. The bi-monthly humor comic was published by Bill Gaines as a companion to Harvey Kurtzman's Mad, which was being heavily imitated by other comic publishers.
 </p><p>
-Panic was edited by Al Feldstein (who became the editor of Mad a few years later). Beginning with its first issue (February–March 1954), Panic had a 12-issue run over two years. Feldstein was the primary cover artist, with stories illustrated by Jack Davis, Will Elder, Jack Kamen, Joe Orlando, Basil Wolverton and Wally Wood. Some story ideas were by Nick Meglin, later the co-editor of Mad. Scripts were by Feldstein, Elder and Jack Mendelsohn, later a co-screenwriter of Yellow Submarine (1968) and an Emmy-nominated TV comedy writer.
+Panic was edited by Al Feldstein (who became the editor of Mad a few years later). Beginning with its first issue (February–March 1954), Panic had a 12-issue run over two years. Feldstein was the primary cover artist, with stories illustrated by Jack Davis, <a href="../WillElder/WillElder.html">Will Elder</a>, Jack Kamen, Joe Orlando, Basil Wolverton and Wally Wood. Some story ideas were by Nick Meglin, later the co-editor of Mad. Scripts were by Feldstein, Elder and Jack Mendelsohn, later a co-screenwriter of Yellow Submarine (1968) and an Emmy-nominated TV comedy writer.
 </p><p>
 EC dubbed Panic the "only authorized imitation" of Mad, but Mad's creator didn't enjoy the joke. Almost thirty years later, Harvey Kurtzman told an interviewer, "Panic was another sore point. Gaines, by some convoluted reasoning, decided to double the profit of Mad by doing a Feldstein version of Mad and he just plundered all of my techniques and artists. For this there was a real conflict of interests."
 </p><p>
