--- a/JackDavis/JackDavis.html
+++ b/JackDavis/JackDavis.html
@@ -35,13 +35,13 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-John Burton Davis, Jr. (December 2, 1924 – July 27, 2016) was an American cartoonist and illustrator, known for his advertising art, magazine covers, film posters, record album art and numerous comic book stories. He was one of the founding cartoonists for Mad in 1952. His cartoon characters are characterized by extremely distorted anatomy, including big heads, skinny legs and large feet.
+John Burton Davis, Jr. (December 2, 1924 – July 27, 2016) was an American cartoonist and illustrator, known for his advertising art, magazine covers, film posters, record album art and numerous comic book stories. He was one of the founding cartoonists for <a href="../Mad/Mad.html">Mad</a> in 1952. His cartoon characters are characterized by extremely distorted anatomy, including big heads, skinny legs and large feet.
 </p><p>
 In 1949, he illustrated a Coca-Cola training manual, a job that gave him enough money to buy a car and drive to New York. Attending the Art Students League of New York, he found work with the Herald Tribune Syndicate as an inker on Leslie Charteris's The Saint comic strip, drawn by Mike Roy in 1949–1950. His own humor strip, Beauregard, with gags in a Civil War setting, was carried briefly by the McClure Syndicate. 
 </p><p>
-After rejections from several comic book publishers, he began freelancing for William Gaines' EC Comics in 1950, contributing to Tales from the Crypt, The Vault of Horror, The Haunt of Fear, Frontline Combat, Two-Fisted Tales, Piracy, Incredible Science Fiction, Crime Suspenstories, Shock Suspenstories and Terror Illustrated.
+After rejections from several comic book publishers, he began freelancing for William Gaines' <a href="../ECComics/ECComics.html">EC Comics</a>  in 1950, contributing to Tales from the Crypt, The Vault of Horror, The Haunt of Fear, Frontline Combat, Two-Fisted Tales, Piracy, Incredible Science Fiction, Crime Suspenstories, Shock Suspenstories and Terror Illustrated.
 </p><p>
-His style of wild, free-flowing brushwork and wacky characters made him a perfect choice when Harvey Kurtzman launched Mad as a zany, satirical EC comic book in 1952. He appeared in most of the first 30 issues of Mad, all 12 issues of Panic and even some work in Cracked. Davis contributed to other Kurtzman magazines—Trump, Humbug and Help!—eventually expanding into illustrations for record jackets, movie posters, books and magazines, including Time and TV Guide.
+His style of wild, free-flowing brushwork and wacky characters made him a perfect choice when Harvey Kurtzman launched Mad as a zany, satirical EC comic book in 1952. He appeared in most of the first 30 issues of Mad, all 12 issues of Panic and even some work in Cracked. Davis contributed to other Kurtzman magazines: <a href="../Trump/Trump.html">Trump</a>, <a href="../Humbug/Humbug.html">Humbug</a> and <a href="../Help/Help.html">Help!</a> eventually expanding into illustrations for record jackets, movie posters, books and magazines, including Time and TV Guide.
 </p>
 </body>
 </html>
