--- a/JayLynch/JayLynch.html
+++ b/JayLynch/JayLynch.html
@@ -33,7 +33,7 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Jay Patrick Lynch (1945 – 2017) was an American cartoonist who played a key role in the underground comix movement with his Bijou Funnies and other titles. He is best known for his comic strip Nard n' Pat and the running gag Um tut sut. His work is sometimes signed Jayzey Lynch. Lynch was the main writer for Bazooka Joe comics from 1967 to 1990; he contributed to Mad, and in the 2000s expanded into the children's book field. 
+Jay Patrick Lynch (1945 – 2017) was an American cartoonist who played a key role in the underground comix movement with his Bijou Funnies and other titles. He is best known for his comic strip Nard n' Pat and the running gag Um tut sut. His work is sometimes signed Jayzey Lynch. Lynch was the main writer for Bazooka Joe comics from 1967 to 1990; he contributed to <a href="../Mad/Mad.html">Mad</a>, and in the 2000s expanded into the children's book field. 
 </p><p>
 Lynch's first published cartoons were for the Roosevelt University humor magazine, the Aardvark; he also contributed to a wide range of college humor publications. Lynch soon graduated to professional humor magazines like Sick, Cracked, and The Realist; and when the underground press movement started in the mid-1960s he became a regular contributor to papers like the Chicago Seed, and (thanks to the Underground Press Syndicate) the Berkeley Barb, the East Village Other, Fifth Estate, and others. Beginning in 1967, Lynch became the lead writer for the Bazooka Joe comics, a gig he kept until 1990.
 </p><p>
