--- a/index.html
+++ b/index.html
@@ -7454,6 +7454,13 @@
 </tr>
 
 <tr>
+<td>Arnold Roth</td>
+<td>1929</td>
+<td>Creator</td>
+<td><a href="ArnoldRoth/ArnoldRoth.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Arrgh!</td>
 <td>1974</td>
 <td>Marvel</td>
@@ -79425,6 +79432,13 @@
 <td>1952</td>
 <td>Harvey</td>
 <td><a href="HarveyComics/HarveyComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Trump</td>
+<td>1957</td>
+<td>Playboy</td>
+<td><a href="Trump/Trump.html">Details</a></td>
 </tr>
 
 <tr>
