--- a/HarveyKurtzman/HarveyKurtzman.html
+++ b/HarveyKurtzman/HarveyKurtzman.html
@@ -29,6 +29,8 @@
 <div class="mySlides" style="text-align: center;"><img src="HarveyKurtzman8.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="HarveyKurtzman9.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="HarveyKurtzman10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="HarveyKurtzman11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="HarveyKurtzman12.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
