--- a/WallyWood/WallyWood.html
+++ b/WallyWood/WallyWood.html
@@ -19,6 +19,7 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
+<div class="mySlides" style="text-align: center;"><img src="WallyWood.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="WallyWood01.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="WallyWood02.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="WallyWood03.jpg"></div>
@@ -26,6 +27,15 @@
 <div class="mySlides" style="text-align: center;"><img src="WallyWood05.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="WallyWood06.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="WallyWood07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WallyWood08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WallyWood09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WallyWood10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WallyWood11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WallyWood12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WallyWood13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WallyWood14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WallyWood15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WallyWood16.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -39,5 +49,6 @@ EC publisher William Gaines once stated, "Wally may have been our most troubled 
 </p><p>
 He was the inaugural inductee into the comic book industry's Jack Kirby Hall of Fame in 1989, and was inducted into the Will Eisner Comic Book Hall of Fame in 1992.
 </p>
+
 </body>
 </html>
