--- a/index.html
+++ b/index.html
@@ -67921,6 +67921,13 @@
 </tr>
 
 <tr>
+<td>Russ Heath</td>
+<td>1926</td>
+<td>Creator</td>
+<td><a href="RussHeath/RussHeath.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Rust</td>
 <td>1987</td>
 <td>Now</td>
