--- a/BobPowell/BobPowell.html
+++ b/BobPowell/BobPowell.html
@@ -8,8 +8,7 @@
 </head>
 
 <body>
-<img src="BobPowell.jpg" title="Bob Powell"> <br>
-
+<img src="BobPowell06.jpg">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -19,17 +18,19 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
+<div class="mySlides" style="text-align: center;"><img src="BobPowell06.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BobPowell01.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BobPowell02.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BobPowell03.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BobPowell04.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BobPowell05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BobPowell07.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Bob Powell (1916 – 1967) was an American comic book artist known for his work during the 1930–1940s Golden Age of comic books, including on the features <a href=
+Bob Powell (1916–1967) was an American comic book artist known for his work during the 1930–1940s Golden Age of comic books, including on the features <a href=
 "../Sheena/Sheena.html">Sheena, Queen of the Jungle</a> and "Mr. Mystic". He received a belated credit in 1999 for co-writing the debut of the popular feature <a href="../Blackhawk/Blackhawk.html">Blackhawk</a>. Powell also did the pencil art for the bubble gum trading card series <a href="../MarsAttacks/MarsAttacks.html">Mars Attacks</a>. He officially changed his name to S. Robert Powell in 1943.
 </p>
 </body>
