--- a/index.html
+++ b/index.html
@@ -3302,6 +3302,14 @@
 
 <tr>
 <td>Airboy</td>
+<td>1945</td>
+<td>Hillman</td>
+<td><a href="Airboy/Airboy.html">Details</a></td>
+</tr>
+
+
+<tr>
+<td>Airboy</td>
 <td>1986</td>
 <td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
@@ -45309,6 +45317,13 @@
 <td>1914</td>
 <td>Creator</td>
 <td><a href="JoeShuster/JoeShuster.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Joe Simon</td>
+<td>1913</td>
+<td>Creator</td>
+<td><a href="JoeSimon/JoeSimon.html">Details</a></td>
 </tr>
 
 <tr>
