--- a/Airboy/Airboy.html
+++ b/Airboy/Airboy.html
@@ -20,7 +20,17 @@
 <div class="modal-content">
 
 <div class="mySlides" style="text-align: center;"><img src="Airboy1.jpg"></div>
-
+<div class="mySlides" style="text-align: center;"><img src="Airboy2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Airboy3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Airboy4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Airboy5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Airboy6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Airboy7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Airboy8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Airboy9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Airboy10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Airboy11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Airboy12.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
