--- a/TrinaRobbins/TrinaRobbins.html
+++ b/TrinaRobbins/TrinaRobbins.html
@@ -23,6 +23,8 @@
 <div class="mySlides" style="text-align: center;"><img src="TrinaRobbins3.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="TrinaRobbins4.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="TrinaRobbins5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../LastGasp/LastGasp18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../LastGasp/LastGasp24.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -30,7 +32,7 @@
 </p><p>
 Trina Robbins (1938) is an American cartoonist. She was an early and influential participant in the underground comix movement, and one of the first few female artists in that movement. Both as a cartoonist and historian, Robbins has long been involved in creating outlets for and promoting female comics artists. In the 1980s, Robbins became the first woman to draw Wonder Woman comics. She is a member of the Will Eisner Hall of Fame. 
 </p><p>
-Robbins' first comics were printed in the East Village Other; she also contributed to the spin-off underground comic Gothic Blimp Works. She left New York for San Francisco in 1970, where she worked at the feminist underground newspaper It Ain't Me, Babe. That same year she and fellow female artist Barbara "Willy" Mendes, co-produced the first all-woman comic book, the one-shot It Ain't Me, Babe Comix and  Wimmen's Comix.
+Robbins' first comics were printed in the East Village Other; she also contributed to the spin-off underground comic Gothic Blimp Works. She left New York for San Francisco in 1970, where she worked at the feminist underground newspaper It Ain't Me, Babe. That same year she and fellow female artist Barbara "Willy" Mendes, co-produced the first all-woman comic book, the one-shot <a href="../LastGasp/LastGasp18.jpg">It Ain't Me, Babe Comix</a> and  <a href="../LastGasp/LastGasp24.jpg">Wimmen's Comix</a>.
 </p>
 
 </body>
