--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <a href="#w">w</a> <a href="#x">x</a> <a href="#y">y</a> <a href="#z">z</a><br>
 <p>
 <a href="revenue.html">Top Franchises</a> &nbsp; <a href="MediaCompanies.html">Top Companies</a> &nbsp;
-<a href="slideshow.html">Cover Slideshow</a>
+<a href="slideshow.html">Cover Slideshow</a> &nbsp; <a href="Awards/Awards.html">Awards</a>
 
 <table id="myTable" class="tablesorter">
 <thead>
