--- a/Awards/Awards.html
+++ b/Awards/Awards.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="../slideshow.css">
 <script src="../slideshow.js"></script>
-<title>Comic Award</title>
+<title>Comic Awards</title>
 </head>
 
 <body>
@@ -39,8 +39,8 @@ The Jack Kirby Award ran from 1985-1987. Hall of Fame:
 <ul><li><a href="../CarlBarks/CarlBarks.html">Carl Barks</a>, <a href="../WillEisner/WillEisner.html">Will Eisner</a>, <a href="../JackKirby/JackKirby.html">Jack Kirby</a>. 
 </ul></p><p>
 The Harvey Awards (https://www.harveyawards.com/) by Fantagraphics, still running since 1987. Hall of Fame:
-<ul><li>2018 <a href="../DaveGibbons/DaveGibbons.html">Dave Gibbons</a>, Roz Chast
-<li>2019 <a href="../MikeMignola/MikeMignola.html">Mike Mignola</a>, Alison Bechdel, <a href="../WillElder/WillElder.html">Will Elder</a>, <a href="../JackDavis/JackDavis.html">Jack Davis</a>, John Severin, <a href="../MarieSeverin/MarieSeverin.html">Marie Severin</a>, Ben Oda.
+<ul><li>2018 <a href="../DaveGibbons/DaveGibbons.html">Dave Gibbons</a>, <a href="../RozChast/RozChast.html">Roz Chast</a>.
+<li>2019 <a href="../MikeMignola/MikeMignola.html">Mike Mignola</a>, <a href="../WillElder/WillElder.html">Will Elder</a>, <a href="../JackDavis/JackDavis.html">Jack Davis</a>, <a href="../JohnSeverin/JohnSeverin.html">John Severin</a>, <a href="../MarieSeverin/MarieSeverin.html">Marie Severin</a>.
 <li>2020: <a href="../OsamuTezuka/OsamuTezuka.html">Osamu Tezuka</a>, <a href="../JillThompson/JillThompson.html">Jill Thompson</a>.
 </ul></p><p>
 The Will Eisner Awards (https://www.comic-con.org) by the San Diego Comicon, still running since 1988. Hall of Fame: 
@@ -52,31 +52,31 @@ The Will Eisner Awards (https://www.comic-con.org) by the San Diego Comicon, sti
 <li>1993 <a href="../CCBeck/CCBeck.html">C. C. Beck</a>, <a href="../BillGaines/BillGaines.html">William Gaines</a>
 <li>1994 <a href="../SteveDitko/Ditko.html">Steve Ditko</a>, <a href="../StanLee/StanLee.html">Stan Lee</a>
 <li>1995 <a href="../FrankFrazetta/FrankFrazetta.html">Frank Frazetta</a>, <a href="../WaltKelly/WaltKelly.html">Walt Kelly</a>
-<li>1996 Hal Foster, Bob Kane, Winsor McCay, Alex Raymond
-<li>1997 Gil Kane, Charles M. Schulz, Julius Schwartz, Curt Swan
-<li>1998 <a href="../NealAdams/NealAdams.html">Neal Adams</a>, Jean Giraud (a.k.a. Moebius), Archie Goodwin, <a href="../JoeKubert/JoeKubert.html">Joe Kubert</a>
-<li>1999 Jack Cole, L. B. Cole, Bill Finger, Gardner Fox, Mac Raboy, Alex Schomburg, Murphy Anderson, Joe Simon, Art Spiegelman, Dick Sprang
-<li>2000 Bill Everett, Sheldon Mayer, George Herriman, <a href="../CarmineInfantino/CarmineInfantino.html">Carmine Infantino</a>, Al Williamson, Basil Wolverton
-<li>2001 Dale Messick, Roy Crane, Chester Gould, Frank King, E. C. Segar, Marie Severin
-<li>2002 Charles Biro, Osamu Tezuka, Sergio Aragonés, John Buscema, Dan DeCarlo, John Romita, Sr.
-<li>2003 Hergé, Bernard Krigstein, Jack Davis, Will Elder, Al Feldstein, John Severin
-<li>2004 Otto Binder, John Stanley, Kazuo Koike, Goseki Kojima, Al Capp, Jules Feiffer, Don Martin, Jerry Robinson
-<li>2005 Lou Fine, René Goscinny and Albert Uderzo, Johnny Craig, Hugo Pratt, Nick Cardy, Gene Colan
-<li>2006 Floyd Gottfredson, William Moulton Marston, Vaughn Bodē, Ramona Fradon, Russ Manning, Jim Steranko
-<li>2007 Robert Kanigher, Ogden Whitney, Ross Andru & Mike Esposito, Dick Ayers, Wayne Boring, Joe Orlando
-<li>2008 Richard F. Outcault, Major Malcolm Wheeler-Nicholson, John Broome, Arnold Drake, Len Wein, Barry Windsor-Smith
-<li>2009 Harold Gray, Graham Ingels, Matt Baker, Reed Crandall, Russ Heath, Jerry Iger
-<li>2010 Burne Hogarth, Bob Montana, Steve Gerber, Dick Giordano, Michael Kaluta, Mort Weisinger
-<li>2011 Ernie Bushmiller, Jack Jackson, Martin Nodell, Lynd Ward, Mort Drucker, Harvey Pekar, Roy Thomas, Marv Wolfman
-<li>2012 Rudolph Dirks, Harry Lucey, Bill Blackbeard, Richard Corben, Katsuhiro Otomo, Gilbert Shelton
-<li>2013 Mort Meskin, Spain Rodriguez, Lee Falk, Al Jaffee, Trina Robbins, Joe Sinnott
-<li>2014 Irwin Hasen, Sheldon Moldoff, Orrin C. Evans, Hayao Miyazaki, Alan Moore, Dennis O'Neil, Bernie Wrightson.
-<li>2015 Marge (Marjorie Henderson Buell), Bill Woggon, John Byrne, Chris Claremont, Denis Kitchen, Frank Miller
-<li>2016 Carl Burgos, Tove Jansson, Lynda Barry, Rube Goldberg, Matt Groening, Jacques Tardi
-<li>2017 Milt Gross, H. G. Peter, Antonio Prohías, Dori Seda, Gilbert Hernandez, Jaime Hernandez, George Perez, Walt Simonson, Jim Starlin
-<li>2018 Carol Kalish, Jackie Ormes, Charles Addams, Karen Berger, Dave Gibbons, Rumiko Takahashi
-<li>2019 Jim Aparo, June Tarpé Mills, Dave Stevens, Morrie Turner, José Luis García-López, Jenette Kahn, Paul Levitz, Wendy and Richard Pini, Bill Sienkiewicz
-<li>2020 Nell Brinkley, E. Simms Campbell, Alison Bechdel, Howard Cruse, Louise Simonson, Stan Sakai, Don and Maggie Thompson, Bill Watterson
+<li>1996 <a href="../HalFoster/HalFoster.html">Hal Foster</a>, <a href="../BobKane/BobKane.html">Bob Kane</a>, <a href="../WinsorMcCay/WinsorMcCay.html">Winsor McCay</a>, <a href="../AlexRaymond/AlexRaymond.html">Alex Raymond</a>.
+<li>1997 <a href="../GilKane/GilKane.html">Gil Kane</a>, <a href="../CharlesSchulz/CharlesSchulz.html">Charles M. Schulz</a>, <a href="../CurtSwan/CurtSwan.html">Curt Swan</a>.
+<li>1998 <a href="../NealAdams/NealAdams.html">Neal Adams</a>, <a href="../JeanGiraud/JeanGiraud.html">Jean Giraud (a.k.a. Moebius)</a>, <a href="../JoeKubert/JoeKubert.html">Joe Kubert</a>
+<li>1999 <a href="../JackCole/JackCole.html">Jack Cole</a>, <a href="../LBCole/LBCole.html">L. B. Cole</a>, <a href="../MacRaboy/MacRaboy.html">Mac Raboy</a>, <a href="../AlexSchomburg/AlexSchomburg.html">Alex Schomburg</a>, <a href="../MurphyAnderson/MurphyAnderson.html">Murphy Anderson</a>, <a href="../JoeSimon/JoeSimon.html">Joe Simon</a>, <a href="../ArtSpiegelman/ArtSpiegelman.html">Art Spiegelman</a>, <a href="../DickSprang/DickSprang.html">Dick Sprang</a>.
+<li>2000 <a href="../BillEverett/BillEverett.html">Bill Everett</a>, <a href="../SheldonMayer/SheldonMayer.html">Sheldon Mayer</a>, <a href="../GeorgeHerriman/GeorgeHerriman.html">George Herriman</a>, <a href="../CarmineInfantino/CarmineInfantino.html">Carmine Infantino</a>, <a href="../AlWilliamson/AlWilliamson.html">Al Williamson</a>, <a href="../BasilWolverton/BasilWolverton.html">Basil Wolverton</a>
+<li>2001 <a href="../DaleMessick/DaleMessick.html">Dale Messick</a>, <a href="../RoyCrane/RoyCrane.html">Roy Crane</a>, <a href="../ChesterGould/ChesterGould.html">Chester Gould</a>, <a href="../GasolineAlley/GasolineAlley.html">Frank King</a>, <a href="../Popeye/Popeye.html">EC Segar</a>, <a href="../MarieSeverin/MarieSeverin.html">Marie Severin</a>
+<li>2002 <a href="../CharlesBiro/CharlesBiro.html">Charles Biro</a>, <a href="../OsamuTezuka/OsamuTezuka.html">Osamu Tezuka</a>, <a href="../SergioAragones/SergioAragones.html">Sergio Aragonés</a>, <a href="../JohnBuscema/JohnBuscema.html">John Buscema</a>, <a href="../DanDeCarlo/DanDeCarlo.html">Dan DeCarlo</a>, John Romita, Sr.
+<li>2003 Hergé, Bernard Krigstein, <a href="../JackDavis/JackDavis.html">Jack Davis</a>, <a href="../WillElder/WillElder.html">Will Elder</a>, <a href="../AlFeldstein/AlFeldstein.html">Al Feldstein</a>, <a href="../JohnSeverin/JohnSeverin.html">John Severin</a>.
+<li>2004 Otto Binder, John Stanley, Kazuo Koike, Goseki Kojima, Al Capp, Jules Feiffer, <a href="../DonMartin/DonMartin.html">Don Martin</a>, Jerry Robinson
+<li>2005 <a href="../LouFine/LouFine.html">Lou Fine</a>, René Goscinny and Albert Uderzo, <a href="../JohnnyCraig/JohnnyCraig.html">Johnny Craig</a>, Hugo Pratt, Nick Cardy, <a href="../GeneColan/GeneColan.html">Gene Colan</a>.
+<li>2006 <a href="../FloydGottfredson/FloydGottfredson.html">Floyd Gottfredson</a>, William Moulton Marston, <a href="../VaughnBode/VaughnBode.html">Vaughn Bodē</a>, Ramona Fradon, Russ Manning, <a href="../JimSteranko/JimSteranko.html">Jim Steranko</a>.
+<li>2007 Robert Kanigher, Ogden Whitney, Ross Andru & Mike Esposito, Dick Ayers, Wayne Boring, <a href="../JoeOrlando/JoeOrlando.html">Joe Orlando</a>
+<li>2008 Richard F. Outcault, Major Malcolm Wheeler-Nicholson, John Broome, Arnold Drake, Len Wein, <a href="../BarryWindsorSmith/BarryWindsorSmith.html">Barry Windsor-Smith</a>.
+<li>2009 <a href="../HaroldGray/HaroldGray.html">Harold Gray</a>, <a href="../GrahamIngles/GrahamIngles.html">Graham Ingels</a>, <a href="../MattBaker/MattBaker.html">Matt Baker</a>, <a href="../ReedCrandall/ReedCrandall.html">Reed Crandall</a>, <a href="../RussHeath/RussHeath.html">Russ Heath</a>, Jerry Iger
+<li>2010 Burne Hogarth, Bob Montana, Steve Gerber, Dick Giordano, <a href="../MichaelKaluta/MichaelKaluta.html">Michael Kaluta</a>, Mort Weisinger
+<li>2011 Ernie Bushmiller, Jack Jackson, Martin Nodell, Lynd Ward, <a href="../MortDrucker/MortDrucker.html">Mort Drucker</a>, Harvey Pekar, Roy Thomas, Marv Wolfman
+<li>2012 Rudolph Dirks, Harry Lucey, Bill Blackbeard, <a href="../RichardCorben/RichardCorben.html">Richard Corben</a>, <a href="../KatsuhiroOtomo/KatsuhiroOtomo.html">Katsuhiro Otomo</a>, <a href="../GilbertShelton/GilbertShelton.html">Gilbert Shelton</a>.
+<li>2013 Mort Meskin, <a href="../SpainRodriguez/SpainRodriguez.html">Spain Rodriguez</a>, Lee Falk, <a href="../AlJaffee/AlJaffee.html">Al Jaffee</a>, <a href="../TrinaRobbins/TrinaRobbins.html">Trina Robbins</a>, Joe Sinnott
+<li>2014 Irwin Hasen, Sheldon Moldoff, Orrin C. Evans, Hayao Miyazaki, <a href="../AlanMoore/AlanMoore.html">Alan Moore</a>, Dennis O'Neil, <a href="../BernieWrightson/BernieWrightson.html">Bernie Wrightson</a>.
+<li>2015 Marge (Marjorie Henderson Buell), Bill Woggon, <a href="../JohnByrne/JohnByrne.html">John Byrne</a>, Chris Claremont, Denis Kitchen, <a href="../FrankMiller/FrankMiller.html">Frank Miller</a>.
+<li>2016 <a href="../CarlBurgos/CarlBurgos.html">Carl Burgos</a>, Tove Jansson, <a href="../LyndaBarry/LyndaBarry.html">Lynda Barry</a>, Rube Goldberg, Matt Groening, Jacques Tardi
+<li>2017 <a href="../MiltGross/MiltGross.html">Milt Gross</a>, H. G. Peter, Antonio Prohías, Dori Seda, Gilbert Hernandez, Jaime Hernandez, <a href="../GeorgePerez/GeorgePerez.html">George Perez</a>, <a href="../WalterSimonson/WalterSimonson.html">Walt Simonson</a>, <a href="../JimStarlin/JimStarlin.html">Jim Starlin</a>.
+<li>2018 Carol Kalish, Jackie Ormes, <a href="../CharlesAddams/CharlesAddams.html">Charles Addams</a>, Karen Berger, <a href="../DaveGibbons/DaveGibbons.html">Dave Gibbons</a>, Rumiko Takahashi
+<li>2019 Jim Aparo, June Tarpé Mills, <a href="../DaveStevens/DaveStevens.html">Dave Stevens</a>, Morrie Turner, José Luis García-López, Jenette Kahn, Paul Levitz, <a href="../WendyPini/WendyPini.html">Wendy Pini</a>, <a href="../BillSienkiewicz/BillSienkiewicz.html">Bill Sienkiewicz</a>
+<li>2020 Nell Brinkley, E. Simms Campbell, Alison Bechdel, Howard Cruse, Louise Simonson, <a href="../StanSakai/StanSakai.html">Stan Sakai</a>, Don and Maggie Thompson, <a href="../CalvinAndHobbes/CalvinAndHobbes.html">Bill Watterson</a>.
 </ul></p>
 
 </body>
