--- a/GasolineAlley/GasolineAlley.html
+++ b/GasolineAlley/GasolineAlley.html
@@ -2,30 +2,44 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Gasoline Alley</title>
 </head>
 <body>
-Gasoline Alley</br>
-<img src="GasolineAlley4.jpg"> <br>
-Creators: Frank King (1918–1959)<br>
-Bill Perry (Sunday strips only, 1951–1975)<br>
-Dick Moores (1956–1986)<br>
-Jim Scancarelli (1986–present)<br>
-Series: 1918 to the present newspaper comic strip and collections.<br>
-Publisher: Tribune Media Services<br>
+
+<img src="GasolineAlley4.jpg">
+<p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="GasolineAlley4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GasolineAlley2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GasolineAlley5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GasolineAlley3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GasolineAlley1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GasolineAlley6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GasolineAlley7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GasolineAlley8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GasolineAlley9.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+Created by Frank King (1918–1959) and published by Tribune Media Services.
 <p>
 Gasoline Alley is a comic strip created by Frank King and currently distributed by Tribune Media Services. First published November 24, 1918, it is the second-longest-running comic strip in the United States (after The Katzenjammer Kids) and has received critical accolades for its influential innovations. In addition to inventive color and page design concepts, King introduced real-time continuity to comic strips by showing his characters as they grew to maturity and aged over generations.
 </p><p>
-<img src="GasolineAlley2.jpg">
-</p><p>
 After a couple of years, the Tribune's editor, Captain Joseph Patterson, whose influence would later have profound effects on such strips as Terry and the Pirates and Little Orphan Annie, decided the strip should have something to appeal to women, as well, and suggested King add a baby. Only problem was the main character, Walt Wallet, was a confirmed bachelor. 
 </p><p>
-<img src="GasolineAlley5.jpg">
-</p><p>
 On February 14, 1921, Walt found the necessary baby abandoned on his doorstep. That was the day Gasoline Alley entered history as the first comic strip in which the characters aged normally. The baby, named Skeezix (cowboy slang for a motherless calf), grew up, fought in World War II, and is now a retired grandfather. Walt married after all, and had more children, who had children of their own. More characters entered the storyline on the periphery and some grew to occupy center stage.
-</p><p>
-<img src="GasolineAlley3.jpg">
 </p>
+
 </body>
 </html>
