--- a/index.html
+++ b/index.html
@@ -26257,6 +26257,13 @@
 </tr>
 
 <tr>
+<td>Dick Sprang</td>
+<td>1915</td>
+<td>Creator</td>
+<td><a href="DickSprang/DickSprang.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dick Tracy</td>
 <td>1931</td>
 <td>Tribune</td>
@@ -29178,6 +29185,13 @@
 <td>1944</td>
 <td>Publisher</td>
 <td><a href="ECComics/ECComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>EC Segar</td>
+<td>1894</td>
+<td>Creator</td>
+<td><a href="Popeye/Popeye.html">Details</a></td>
 </tr>
 
 <tr>
@@ -34489,6 +34503,13 @@
 <td>2004</td>
 <td>Avatar</td>
 <td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Frank King</td>
+<td>1883</td>
+<td>Creator</td>
+<td><a href="GasolineAlley/GasolineAlley.html">Details</a></td>
 </tr>
 
 <tr>
@@ -45492,6 +45513,13 @@
 <td>1957</td>
 <td>Creator</td>
 <td><a href="JohnRomitaJr/JohnRomitaJr.html">Details</a></td>
+</tr>
+
+<tr>
+<td>John Severin</td>
+<td>1921</td>
+<td>Creator</td>
+<td><a href="JohnSeverin/JohnSeverin.html">Details</a></td>
 </tr>
 
 <tr>
@@ -67800,6 +67828,13 @@
 <td>2014</td>
 <td>Vertigo</td>
 <td><a href="Vertigo/Vertigo.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Roz Chast</td>
+<td>1954</td>
+<td>Creator</td>
+<td><a href="RozChast/RozChast.html">Details</a></td>
 </tr>
 
 <tr>
