--- a/JohnSeverin/JohnSeverin.html
+++ b/JohnSeverin/JohnSeverin.html
@@ -30,6 +30,7 @@
 <div class="mySlides" style="text-align: center;"><img src="JohnSeverin10.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="JohnSeverin11.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="JohnSeverin12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JohnSeverin13.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
