--- a/LilAbner/LilAbner.html
+++ b/LilAbner/LilAbner.html
@@ -32,7 +32,7 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Li'l Abner is a satirical American comic strip that appeared in many newspapers in the United States, Canada and Europe, featuring a fictional clan of hillbillies in the impoverished mountain village of Dogpatch, USA. Written and drawn by Al Capp, the strip ran for 43 years, from August 13, 1934 through November 13, 1977. The Sunday page debuted six months after the daily, on February 24, 1935. It was originally distributed by United Feature Syndicate, and later by the Chicago Tribune New York News Syndicate.
+Li'l Abner is a satirical American comic strip that appeared in many newspapers in the United States, Canada and Europe, featuring a fictional clan of hillbillies in the impoverished mountain village of Dogpatch, USA. Written and drawn by <a href="../AlCapp/AlCapp.html">Al Capp</a>, the strip ran for 43 years, from August 13, 1934 through November 13, 1977. The Sunday page debuted six months after the daily, on February 24, 1935. It was originally distributed by United Feature Syndicate, and later by the Chicago Tribune New York News Syndicate.
 </p><p>
 Comic strips typically dealt with northern urban experiences before Capp introduced Li'l Abner, the first strip based in the South. The comic strip had 60 million readers in over 900 American newspapers and 100 foreign papers in 28 countries. Capp "had a profound influence on the way the world viewed the American South."
 </p>
