--- a/Tintin/Tintin.html
+++ b/Tintin/Tintin.html
@@ -8,9 +8,7 @@
 </head>
 
 <body>
-<img src="Tintin1.jpg"> <br>
-Series: 1929 <br>
-Publisher: Casterman<br>
+<img src="Tintin1.jpg">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -40,7 +38,7 @@ Publisher: Casterman<br>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Tintin in the Land of the Soviets (French: Tintin au pays des Soviets) is the first volume of The Adventures of Tintin, the comics series by Belgian cartoonist Hergé. 
+Tintin in the Land of the Soviets (French: Tintin au pays des Soviets) is the first volume of The Adventures of Tintin, the comics series by Belgian cartoonist <a href="../Herge/Herge.html">Hergé</a>, which began in 1929, published by Casterman. 
 </p><p>
 Commissioned by the conservative Belgian newspaper Le Vingtième Siècle as anti-communist satire for its children's supplement Le Petit Vingtième, it was serialised weekly from January 1929 to May 1930 before being published in a collected volume by Éditions du Petit Vingtième in 1930. 
 </p><p>
