--- a/LittleLulu/LittleLulu.html
+++ b/LittleLulu/LittleLulu.html
@@ -32,7 +32,9 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Little Lulu is a comic strip created in 1935 by Marjorie Henderson Buell. The character, Lulu Moppet, debuted in The Saturday Evening Post on February 23, 1935, in a single panel, appearing as a flower girl at a wedding and mischievously strewing the aisle with banana peels. Little Lulu replaced Carl Anderson's Henry, which had been picked up for distribution by King Features Syndicate. The Little Lulu panel continued to run weekly in The Saturday Evening Post until December 30, 1944. 
+Little Lulu is a comic strip created in 1935 by Marjorie Henderson Buell who worked under the pen name Marge. The character, Lulu Moppet, debuted in The Saturday Evening Post on February 23, 1935, in a single panel, appearing as a flower girl at a wedding and mischievously strewing the aisle with banana peels. Little Lulu replaced Carl Anderson's Henry, which had been picked up for distribution by King Features Syndicate. The Little Lulu panel continued to run weekly in The Saturday Evening Post until December 30, 1944. 
+</p><p>
+Buell retained the rights, unusual for the time, and marketed Little Lulu widely throughout the 1940s. Buell herself ceased drawing the strip in 1947, and in 1950 Little Lulu became a daily syndicated by Chicago Tribune–New York News Syndicate and ran until 1969. The Little Lulu stories were handed over to <a href="../JohnStanley/JohnStanley.html">John Stanley</a>.  After she stopped drawing the strip, Buell herself only drew Lulu for the lucrative Kleenex advertisements.
 </p>
 
 </body>
