--- a/index.html
+++ b/index.html
@@ -3484,6 +3484,13 @@
 </tr>
 
 <tr>
+<td>Al Capp</td>
+<td>1920</td>
+<td>Creator</td>
+<td><a href="AlCapp/AlCapp.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Al Capp's Li'l Abner: The Frazetta Years</td>
 <td>2003</td>
 <td>Dark Horse</td>
@@ -11302,6 +11309,19 @@
 <td>Creator</td>
 <td><a href="BernardBaily/BernardBaily.html">Details</a></td>
 </tr>
+
+<tr>
+<td>Bernard Krigstein</td>
+<td>1919</td>
+<td>Creator</td>
+<td><a href="BernieKrigstein/BernieKrigstein.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bernard Wrightson</td>
+<td>1948</td>
+<td>Creator</td>
+<td><a href="BernieWrightson/BernieWrightson.html">Details</a></td>
 
 <tr>
 <td>Berni Wrightson</td>
@@ -37908,6 +37928,13 @@
 </tr>
 
 <tr>
+<td>Goseki Kojima</td>
+<td>1928</td>
+<td>Creator</td>
+<td><a href="GosekiKojima/GosekiKojima.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Gotcha!</td>
 <td>1991</td>
 <td>Rip Off</td>
@@ -40970,6 +40997,13 @@
 <td>1982</td>
 <td>Marvel</td>
 <td><a href="Hercules/Hercules.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hergé</td>
+<td>1907</td>
+<td>Creator</td>
+<td><a href="Herge/Herge.html">Details</a></td>
 </tr>
 
 <tr>
@@ -44760,6 +44794,13 @@
 </tr>
 
 <tr>
+<td>Jerry Robinson</td>
+<td>1922</td>
+<td>Creator</td>
+<td><a href="JerryRobinson/JerryRobinson.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Jerry Siegel</td>
 <td>1914</td>
 <td>Creator</td>
@@ -45516,10 +45557,24 @@
 </tr>
 
 <tr>
+<td>John Romita Sr</td>
+<td>1930</td>
+<td>Creator</td>
+<td><a href="JohnRomitaSr/JohnRomitaSr.html">Details</a></td>
+</tr>
+
+<tr>
 <td>John Severin</td>
 <td>1921</td>
 <td>Creator</td>
 <td><a href="JohnSeverin/JohnSeverin.html">Details</a></td>
+</tr>
+
+<tr>
+<td>John Stanley</td>
+<td>1914</td>
+<td>Creator</td>
+<td><a href="JohnStanley/JohnStanley.html">Details</a></td>
 </tr>
 
 <tr>
@@ -46030,6 +46085,13 @@
 <td>1965</td>
 <td>Archie</td>
 <td><a href="ArchieComics/ArchieComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Jules Feiffer</td>
+<td>1929</td>
+<td>Creator</td>
+<td><a href="JulesFeiffer/JulesFeiffer.html">Details</a></td>
 </tr>
 
 <tr>
@@ -46772,6 +46834,13 @@
 <td>2006</td>
 <td>Viz</td>
 <td><a href="Viz/Viz.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Kazuo Koike</td>
+<td>1936</td>
+<td>Creator</td>
+<td><a href="KazuoKoike/KazuoKoike.html">Details</a></td>
 </tr>
 
 <tr>
@@ -52470,6 +52539,13 @@
 <td>1944</td>
 <td>Chesler
 <td><a href="Chesler/Chesler.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Marjorie "Marge" Buell</td>
+<td>1904</td>
+<td>Creator</td>
+<td><a href="LittleLulu/LittleLulu.html">Details</a></td>
 </tr>
 
 <tr>
