--- a/Asterix/Asterix.html
+++ b/Asterix/Asterix.html
@@ -8,8 +8,7 @@
 </head>
 
 <body>
-<img src="Asterix.jpg"> <br>
-
+<img src="Asterix.jpg">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -30,6 +29,7 @@
 <div class="mySlides" style="text-align: center;"><img src="Asterix08.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Asterix09.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Asterix10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Asterix11.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
