--- a/index.html
+++ b/index.html
@@ -3736,6 +3736,13 @@
 </tr>
 
 <tr>
+<td>Albert Uderzo</td>
+<td>1927</td>
+<td>Creator</td>
+<td><a href="Asterix/Asterix.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Alberta Breccia Library: Mort Cinder</td>
 <td>2018</td>
 <td>Fantagraphics</td>
@@ -32938,7 +32945,7 @@
 </tr>
 
 <tr>
-<td>Fiction House</td>
+<td>Fiction House Publications</td>
 <td>1921</td>
 <td>Publisher</td>
 <td><a href="FictionHouse/FictionHouse.html">Details</a></td>
@@ -42327,6 +42334,13 @@
 <td>1995</td>
 <td>MU Press</td>
 <td><a href="MUPress/MUPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hugo Pratt</td>
+<td>1927</td>
+<td>Creator</td>
+<td><a href="HugoPratt/HugoPratt.html">Details</a></td>
 </tr>
 
 <tr>
@@ -66023,6 +66037,13 @@
 </tr>
 
 <tr>
+<td>Rene Goscinny</td>
+<td>1927</td>
+<td>Creator</td>
+<td><a href="Asterix/Asterix.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Renegade</td>
 <td>1991</td>
 <td>Rip Off</td>
@@ -84535,6 +84556,13 @@
 <td>1989</td>
 <td>Epic</td>
 <td><a href="MarvelGraphicNovel/MarvelGraphicNovel.html">Details</a></td>
+</tr>
+
+<tr>
+<td>William "Charles Moulton" Marston</td>
+<td>1893</td>
+<td>Creator</td>
+<td><a href="WonderWoman/WonderWoman.html">Details</a></td>
 </tr>
 
 <tr>
