--- a/ScottMcCloud/ScottMcCloud.html
+++ b/ScottMcCloud/ScottMcCloud.html
@@ -8,9 +8,7 @@
 </head>
 
 <body>
-Scott McCloud<br>
-<img src="ScottMcCloud.jpg"><br>
-
+<img src="ScottMcCloud.jpg">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -26,6 +24,9 @@ Scott McCloud<br>
 <div class="mySlides" style="text-align: center;"><img src="ScottMcCloud4.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ScottMcCloud5.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ScottMcCloud6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Eclipse/Eclipse52.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ScottMcCloud7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ScottMcCloud8.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -46,6 +47,15 @@ Using a portal created by Uncle Max, a link is created from contemporary Earth t
 In Zot's utopian Earth, years seem to not pass by as it is permanently stuck in 1965. The inhabitants of Zot's world are unable to notice this fact, but Jenny and her friends from our Earth realize it.
 </p><p>
 The true nature of Zot's world is never truly explained in the comic, and is left as a loose end, but it is hinted that Zot's world is a copy of our own.
+</p><p>
+<li><a href="ScottMcCloud4.jpg">Zot!</a> (1984)
+<li><a href="../Eclipse/Eclipse52.jpg">Destroy!!</a> (1986)
+<li><a href="ScottMcCloud1.jpg">Understanding Comics</a> (1993)
+<li><a href="ScottMcCloud7.jpg">New Adventures Of Abraham Lincoln</a> (1998) 
+<li><a href="ScottMcCloud2.jpg">Reinventing Comics</a> (2000)
+<li><a href="ScottMcCloud3.jpg">Making Comics</a> (2006)
+<li><a href="ScottMcCloud8.jpg">Sculpter</a> (2015)
 </p>
+
 </body>
 </html>
