--- a/index.html
+++ b/index.html
@@ -26270,6 +26270,13 @@
 </tr>
 
 <tr>
+<td>Dick Ayers</td>
+<td>1924</td>
+<td>Creator</td>
+<td><a href="DickAyers/DickAyers.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dick Cole</td>
 <td>1958</td>
 <td>Accepted</td>
@@ -55460,6 +55467,13 @@
 </tr>
 
 <tr>
+<td>Mike Esposito</td>
+<td>1927</td>
+<td>Creator</td>
+<td><a href="MikeEsposito/MikeEsposito.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Mike Grell's Sable</td>
 <td>1990</td>
 <td>First Comics</td>
@@ -60264,6 +60278,13 @@
 <td>1947</td>
 <td>Atlas</td>
 <td><a href="AllTrueCrimeCases/AllTrueCrimeCases.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ogden Whitney<td>
+<td>1918</td>
+<td>Creator</td>
+<td><a href="../OgdenWhitney/OgdenWhitney.html">Details</a>
 </tr>
 
 <tr>
@@ -65079,6 +65100,13 @@
 </tr>
 
 <tr>
+<td>Ramona Fradon<td>
+<td>1926</td>
+<td>Creator</td>
+<td><a href="../RamonaFradon/RamonaFradon.html">Details</a>
+</tr>
+
+<tr>
 <td>Rampage Redux</td>
 <td>2017</td>
 <td>Valiant</td>
@@ -67802,6 +67830,13 @@
 </tr>
 
 <tr>
+<td>Ross Andru</td>
+<td>1927</td>
+<td>Creator</td>
+<td><a href="RossAndru/RossAndru.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Roth Vanguard And The Venomous Vipers</td>
 <td>2018</td>
 <td>Lody Art Comics</td>
@@ -68072,6 +68107,13 @@
 <td>1926</td>
 <td>Creator</td>
 <td><a href="RussHeath/RussHeath.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Russ Manning<td>
+<td>1926</td>
+<td>Creator</td>
+<td><a href="../RussManning/RussManning.html">Details</a>
 </tr>
 
 <tr>
